--- a/assets/style.css
+++ b/assets/style.css
@@ -1,162 +1,86 @@
 * {
-    box-sizing: border-box;
-  }
-
-/*styling for the header and header elements */
-  #header-wrapper {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    padding: 25px;
-    align-items: center;
-}
-header a {
-    text-decoration: none;
-    color: purple;
-    font-size: 20px;
-    display: inline;
-    font-weight: bold;
-}
-header p {
-    display: inline;
-    font-size: 20px;
-    font-weight: bold;
-}
-
-main {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-/* styling for the question wraper and elements that apper in the 
-question wrapper */
-.question-wrapper {
-    width: 50%;
-}
-
-.question-wrapper h2 {
-    font-size: 32px;
+    background-color: white;
+    font-family: 'Times Newman', Arial;
     text-align: center;
-    min-height: 100px;
-}
-.question-wrapper p {
-    text-align: center;
-    font-size: 20px;
-}
-
-#startBtn-wrapper {
-    display: flex;
-    justify-content: center;
-}
-
-/* styling for the button class */
-.btn {
-    outline: none;
-    border: none;
-    font-size: 20px;
-    padding: 10px 30px;
-    background: rgb(83, 21, 125);
-    color: white;
-    border-radius: 12px;
-    display: block;
-    margin: 10px 5px;
-    width: fit-content;
-}
-
-.btn:hover {
-    background: rgb(191, 29, 209);
-}
-
-/* styling for the ordered list / answer choices */
-#choice-ol {
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    height: 300px;
-
-}
-
-.choice {
-    font-size: 20px;
-    padding: 10px 30px;
-    background: rgb(83, 21, 125);
-    color: white;
-    border-radius: 12px;
-    display: block;
-    margin: 7px 0;
-    /*width: 100%;*/
-}
-
-.choice:hover {
-    background: rgb(191, 29, 209);
-}
-
-/* styling for the correct / wrong feedback */
-#feedback-message {
-    font-size: 32px;
-    color: gray;
-}
-
-/* styling for the "enter initials" form */
-#initials-form-wrapper {
-    height: 100px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-}
-
-#initials-form {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    align-items: center;
-}
-
-#initials-label {
-    font-size: 20px;
-    font-weight: bold;
-    padding: 0 15px 0 0;
-}
-
-#initials {
-    font-size: 20px;
-}
-
-/* styling for the high scores page */
-#scores-title {
-    font-size: 48px;
-    text-align: center;
-}
-
-#score-wrapper {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-#empty-scores-msg {
-    font-size: 32px;
-
-}
-
-#score-ol {
-    padding: 0;
-    width: 50%;
-    background: lightgray;
-    list-style-position: inside;
-}
-
-.score-li {
-    font-size: 20px;
-    background: lightgray;
-    padding: 10px 10px;
-}
-
-/* styling for the buttons on the high scores page */
-#button-wrapper {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-}
+    color: rgb(13, 13, 100);
+    }
+    
+    .hide {
+        display: none;
+    }
+    
+    .highScore a {
+        color: rgb(26, 28, 133);
+        font-style: italic;   
+        cursor: pointer;
+    }
+    .highScore a:hover {
+        color: rgb(26, 70, 138);
+        font-weight: bold;
+    }
+    
+    #start {
+        font-size: 20px;
+        font-weight: 250;
+        padding: 3px rgb(4, 4, 100);
+        border-radius: 5px;
+        opacity: .8;
+    }
+    
+    #start:hover {
+        cursor: pointer;
+        opacity: 1;
+        font-size: 25px;
+    }
+    
+    
+    #questions { 
+        display:grid;
+        grid-column: 1;
+        margin: 0 500px;
+        
+    }
+    
+    
+    #questions button{
+        color:rgb(7, 13, 87);
+        font-size: 20px;
+        border-radius: 5px;
+        border-style: solid;
+        margin: 10px 20px 10px 20px;
+        border-color: white;
+        align-items: center;
+        display:inline;
+        padding: 0 0 2px 0;
+        opacity: 1;
+    }
+    #questions button:hover {
+        cursor: pointer;
+        font-size: 20px;
+        opacity: .8;
+    }
+    
+    #time {
+        font-size: 50px;
+    }
+    
+    .text-input {
+        margin: 0 0 10px 0;
+        color: rgb(26, 70, 138);
+        background-color: seashell;
+    }
+    
+    .btn {
+        color:white;
+        font-size: 15px;
+    }
+    
+    @media screen and (max-width: 500px) {
+        #choices {
+            width: 100%
+        }
+    
+        #choices button {
+            margin: 0 50px;
+        }
+    }    
