--- a/assets/style.css
+++ b/assets/style.css
@@ -1,86 +1,147 @@
-* {
-    background-color: white;
-    font-family: 'Times Newman', Arial;
+#wrapper{
+    position:absolute;
+    left:30%;
+    top:20%;
+    width: fit-content;
+    height: 500px;
+    border: 1px,solid, rgb(73, 73, 221);
     text-align: center;
-    color: rgb(13, 13, 100);
+}
+
+#StartTime{
+    background-color: rgb(73, 73, 221);
+    margin-left: 5%;
+    margin-top: 10%;
+    padding: 10px 20px;
+    font-size: 20px;
+    color: white;
+}
+
+#StartTime:hover{
+    cursor: pointer;
+    opacity: 1;
+    font-size: 30px;
+}
+
+#questions {
+    margin: 20px;
+}
+
+#currentTime {
+    float: right;
+}
+
+#goBack {
+    background-color: rgb(73, 73, 221);
+    position: relative;
+    padding: 10px;
+    font-size: 20px;
+    color: white;
+    top: 30%;
+    left: 55%;
+    width: auto;
+    text-align: center;
+    text-decoration: none;
+}
+
+#clear {
+    background-color: rgb(73, 73, 221);
+    position: relative;
+    padding: 10px;
+    font-size: 20px;
+    color: white;
+    top: 30%;
+    right: 5%;
+    text-align: center;
+}
+
+button {
+    border-radius: 8px;
+}
+
+textarea {
+    width: 90%;
+    margin: 20px;
+}
+
+#Submit {
+    background-color: rgb(73, 73, 221);
+    margin-left: 33%;
+    padding: 15px 32px;
+    font-size: 20px;
+    color: white;
+}
+
+label {
+    margin-right: 10px;
+}
+input {
+    margin-bottom: 20px;
+    width: 50%;
+    border: 1px solid lightgray;
+}
+
+h1 {
+    text-align: center;
+}
+
+li {
+    background-color: rgb(73, 73, 221)e;
+    margin-top: 10px;
+    padding: 5px 15px;
+    width: 80%;
+    font-size: 18px;
+    color: white;
+}
+
+#createDiv {
+    margin-top: 20px;
+    border-top: 1px solid lightgray;
+}
+
+@media screen and (max-width: 786px) {
+    /* Resized content to fit 786px  */
+        body {
+            max-width: 786px;
+        }
+    /* Resized main-content to fit 786px  */
+    #wrapper {
+        position: absolute;
+        left: 20%;
     }
-    
-    .hide {
-        display: none;
+
+    a {
+        margin-left: 20%;
     }
-    
-    .highScore a {
-        color: rgb(26, 28, 133);
-        font-style: italic;   
-        cursor: pointer;
+        #goBack {
+            
+            position: relative;
+            left: 55%;
+        }
+
+        #clear {
+            
+            position: relative;
+            right: 5%;
+            
+        }
     }
-    .highScore a:hover {
-        color: rgb(26, 70, 138);
-        font-weight: bold;
-    }
-    
-    #start {
-        font-size: 20px;
-        font-weight: 250;
-        padding: 3px rgb(4, 4, 100);
-        border-radius: 5px;
-        opacity: .8;
-    }
-    
-    #start:hover {
-        cursor: pointer;
-        opacity: 1;
-        font-size: 25px;
-    }
-    
-    
-    #questions { 
-        display:grid;
-        grid-column: 1;
-        margin: 0 500px;
         
-    }
-    
-    
-    #questions button{
-        color:rgb(7, 13, 87);
-        font-size: 20px;
-        border-radius: 5px;
-        border-style: solid;
-        margin: 10px 20px 10px 20px;
-        border-color: white;
-        align-items: center;
-        display:inline;
-        padding: 0 0 2px 0;
-        opacity: 1;
-    }
-    #questions button:hover {
-        cursor: pointer;
-        font-size: 20px;
-        opacity: .8;
-    }
-    
-    #time {
-        font-size: 50px;
-    }
-    
-    .text-input {
-        margin: 0 0 10px 0;
-        color: rgb(26, 70, 138);
-        background-color: seashell;
-    }
-    
-    .btn {
-        color:white;
-        font-size: 15px;
-    }
-    
-    @media screen and (max-width: 500px) {
-        #choices {
-            width: 100%
+    /* A Media Query max-width: 640px */
+    @media screen and (max-width: 640px) {
+     /* Resized content to fit 640px  */
+     body {
+            min-width: 640px;
         }
-    
-        #choices button {
-            margin: 0 50px;
-        }
-    }    
+    /* Resized main-content to fit 640px  */
+    #wrapper {
+        position: absolute;
+        left: 10%;
+    }
+      a {
+          margin-left: 10%;
+      }
+
+     
+}
+
